--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^4.3.1"
   },
   "scripts": {
-    "start": "node ./server.js",
+    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "name": "bananaoatmeal",
   "version": "1.0.0",
   "description": "Guided Project 2",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/armani-8/bananaoatmeal.git"
